# api/controller/metrics.go
@@ -2,6 +2,10 @@ package controller
 
 import (
 	"context"
+	"fmt"
+
+	"github.com/spf13/cast"
+
 	"github.com/xiaoxlm/monitor-gateway/api/domain/factory"
 	"github.com/xiaoxlm/monitor-gateway/api/domain/repo"
 	"github.com/xiaoxlm/monitor-gateway/api/request"
@@ -11,6 +15,8 @@ import (
 
 	"github.com/xiaoxlm/monitor-gateway/config"
 	"github.com/xiaoxlm/monitor-gateway/pkg/metrics/prometheus"
+
+	domain_model "github.com/xiaoxlm/monitor-gateway/api/domain/model"
 )
 
 func ListMetricsMapping(ctx context.Context, query *request.ListMetricsMappingQuery) ([]model.MetricsMapping, error) {
@@ -18,13 +24,18 @@ func ListMetricsMapping(ctx context.Context, query *request.ListMetricsMappingQu
 	return repo.ListMetricsMapping(ctx, config.Config.Mysql.GetDB(), query.Category, query.MetricsUniqueID)
 }
 
-func ListMetrics(ctx context.Context, queries []request.MetricsQueryInfo) (*response.ListMetricsRESP, error) {
+func ListMetrics(ctx context.Context, queryInfos []request.MetricsQueryInfo) (*response.ListMetricsRESP, error) {
 	prom, err := prometheus.NewPrometheus(config.Config.Prom.GetClient())
 	if err != nil {
 		return nil, err
 	}
 
 	db := config.Config.Mysql.GetDB()
+
+	queries, err := ConvertMetricsQueryInfo(queryInfos)
+	if err != nil {
+		return nil, err
+	}
 
 	m, err := factory.FactoryMetrics(ctx, db, prom, queries)
 	if err != nil {
@@ -58,4 +69,60 @@ func MetricMultiDataMapping(uniqueID enum.MetricUniqueID) bool {
 	default:
 		return false
 	}
+}
+
+const (
+	FixedQueryKeyStart = "start"
+	FixedQueryKeyEnd   = "end"
+	FixedQueryKeyStep  = "step"
+)
+
+func ConvertMetricsQueryInfo(queries []request.MetricsQueryInfo) (ret []domain_model.MetricsQuery, err error) {
+
+	for _, query := range queries {
+
+		var (
+			start, end int64
+			step       uint
+		)
+		{
+			startSTR, ok := query.LabelValue[FixedQueryKeyStart]
+			if !ok {
+				return nil, fmt.Errorf("start label is required")
+			}
+			start, err = cast.ToInt64E(startSTR)
+			if err != nil {
+				return nil, err
+			}
+
+			endSTR, ok := query.LabelValue[FixedQueryKeyEnd]
+			if !ok {
+				return nil, fmt.Errorf("end label is required")
+			}
+			end, err = cast.ToInt64E(endSTR)
+			if err != nil {
+				return nil, err
+			}
+
+			stepSTR, ok := query.LabelValue[FixedQueryKeyStep]
+			if !ok {
+				return nil, fmt.Errorf("step label is required")
+			}
+			step, err = cast.ToUintE(stepSTR)
+			if err != nil {
+				return nil, err
+			}
+
+		}
+
+		ret = append(ret, domain_model.MetricsQuery{
+			MetricUniqueID: query.MetricUniqueID,
+			LabelValue:     query.LabelValue,
+			Start:          start,
+			End:            end,
+			Step:           step,
+		})
+	}
+
+	return ret, nil
 }
