# api/request/metrics.go
@@ -9,7 +9,4 @@ type MetricsBatchQueryBody struct {
 type MetricsQueryInfo struct {
 	MetricUniqueID enum.MetricUniqueID `json:"metricUniqueID" binding:"required"`
 	LabelValue     map[string]string   `json:"labelValue" binding:"required"`
-	Start          int64               `json:"start" binding:"required"` // 开始时间
-	End            int64               `json:"end" binding:"required"`   // 结束时间
-	Step           uint                `json:"step" binding:"required"`  // 步长
 }
